--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,6 +6,7 @@
   <title>Daily Journal</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="icon" type="image/png" href="images/favicon.png">
   <link rel="stylesheet" href="/css/styles.css">
   <nav class="navbar navbar-default">
     <div class="container">
